--- a/roles/autoenroll/templates/openssl.cnf.j2
+++ b/roles/autoenroll/templates/openssl.cnf.j2
@@ -19,8 +19,8 @@ stateOrProvinceName_default    = Ohio
 localityName			= Cleveland
 localityName_default    = Cleveland
 
-0.organizationName		= AmTrust North America, Inc.
-0.organizationName_default      = AmTrust North America, Inc.
+0.organizationName		= Company, Inc.
+0.organizationName_default      = Company, Inc.
 
 organizationalUnitName	= IT
 organizationalUnitName_default = IT
